# realtime-translator

./: .env.example  .gitignore  README.ja.md  README.md  app.yaml  pyproject.toml  requirements.txt
client/: app.js  audio-chunks.js  audio-playback.js  capture-options.js  echo-detect.js  index.html  styles.css  transcript-export.js
client/tests/: audio-chunks.test.js  audio-encoding.test.js  audio-mix.test.js  audio-playback.test.js  capture-options.test.js  echo-detect.test.js  transcript-export.test.js
docs/: api-verification.md
infra/: setup.sh
scripts/: e2e-ws.mjs  smoke-azure.mjs
server/: __main__.py  azure_realtime.py  compose.py  config.py  main.py
tests/: test_api.py  test_session_config.py
